force-app/main/default/objects/Patient_Registration__c/fields/Clinical_Site__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Clinical Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Patient</relationshipLabel>
    <relationshipName>Patient_Registrations</relationshipName>
    <type>Lookup</type>
</CustomField>