force-app/main/default/objects/Patient_Registration__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Reason of Signature</label>
    <type>TextArea</type>
</CustomField>