force-app/main/default/objects/Patient_Registration__c/fields/is_clinical__c.field-meta.xml
<CustomField>
    <fullName>is_clinical__c</fullName>
    <formula>CreatedBy.Id != $User.Id &amp;&amp; $User.ProfileId = CreatedBy.Profile.Id &amp;&amp; ISPICKVAL( Status__c , &apos;Yet_to_Verify&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>is clinical</label>
    <type>Checkbox</type>
</CustomField>