force-app/main/default/objects/Patient_Registration__c/fields/Is_Patient_Journey_Started__c.field-meta.xml
<CustomField>
    <fullName>Is_Patient_Journey_Started__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Patient Journey Started</label>
    <type>Checkbox</type>
</CustomField>