force-app/main/default/objects/Patient_Registration__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yet_to_Verify</fullName>
                <default>true</default>
                <label>Yet to Verify</label>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>