force-app/main/default/objects/Patient_Registration__c/fields/Study_Protocol__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Protocol</label>
    <referenceTo>Study_Protocol__c</referenceTo>
    <relationshipLabel>Patient</relationshipLabel>
    <relationshipName>Patient</relationshipName>
    <type>Lookup</type>
</CustomField>