force-app/main/default/objects/Patient_Registration__c/fields/Study_Protocol_Name__c.field-meta.xml
<CustomField>
    <fullName>Study_Protocol_Name__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Study_Protocol__r.Id ,  Study_Protocol__r.Display_Name__c ,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Study Protocol Name</label>
    <type>Text</type>
</CustomField>