force-app/main/default/objects/Patient_Registration__c/fields/Subject_ID__c.field-meta.xml
<CustomField>
    <fullName>Subject_ID__c</fullName>
    <label>Subject ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>