force-app/main/default/objects/Patient_Registration__c/fields/Verify_At__c.field-meta.xml
<CustomField>
    <fullName>Verify_At__c</fullName>
    <label>Verify At</label>
    <type>DateTime</type>
</CustomField>