force-app/main/default/objects/Patient_Registration__c/fields/Verify_Patient__c.field-meta.xml
<CustomField>
    <fullName>Verify_Patient__c</fullName>
    <formula>AND (

$User.ProfileId = CreatedBy.ProfileId,
CreatedBy.Username &lt;&gt; $User.Username

)</formula>
    <label>Verify Patient</label>
    <type>Checkbox</type>
</CustomField>