force-app/main/default/objects/Patient_Registration__c/validationRules/Year_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Year_validation</fullName>
    <active>true</active>
    <errorConditionFormula>VALUE(Year_of_Birth__c)  &gt; YEAR(TODAY())</errorConditionFormula>
    <errorDisplayField>Year_of_Birth__c</errorDisplayField>
    <errorMessage>The year of birth cannot be in the future.</errorMessage>
</ValidationRule>