force-app/main/default/objects/Patient_Registration__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Subject_ID__c</columns>
    <columns>Year_of_Birth__c</columns>
    <columns>Clinical_Site__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>